# Metis

./: .cursorrules  .gitignore  CHANGELOG.md  LICENSE  README.md
metis-os-workspace/: Cargo.toml  TODO.md
metis-os-workspace/assets/: metis-portals.conf  metis-session  metis-settings.desktop  metis.desktop  metis.portal  pam-metis
metis-os-workspace/assets/locale/ar/LC_MESSAGES/: metis.mo  metis.po
metis-os-workspace/assets/locale/ar/compositor/: metis.ftl
metis-os-workspace/assets/locale/de/LC_MESSAGES/: metis.mo  metis.po
metis-os-workspace/assets/locale/de/compositor/: metis.ftl
metis-os-workspace/assets/locale/en/LC_MESSAGES/: metis.mo  metis.po  metis.pot
metis-os-workspace/assets/locale/en/compositor/: metis.ftl
metis-os-workspace/assets/locale/es/LC_MESSAGES/: metis.mo  metis.po
metis-os-workspace/assets/locale/es/compositor/: metis.ftl
metis-os-workspace/assets/locale/fr/LC_MESSAGES/: metis.mo  metis.po
metis-os-workspace/assets/locale/fr/compositor/: metis.ftl
metis-os-workspace/assets/locale/he/LC_MESSAGES/: metis.mo  metis.po
metis-os-workspace/assets/locale/he/compositor/: metis.ftl
metis-os-workspace/assets/locale/it/LC_MESSAGES/: metis.mo  metis.po
metis-os-workspace/assets/locale/it/compositor/: metis.ftl
metis-os-workspace/assets/locale/ja/LC_MESSAGES/: metis.mo  metis.po
metis-os-workspace/assets/locale/ja/compositor/: metis.ftl
metis-os-workspace/metis-capture/: Cargo.toml
metis-os-workspace/metis-capture/src/: image.rs  lib.rs  shm.rs  wayland.rs
metis-os-workspace/metis-compositor/: Cargo.toml
metis-os-workspace/metis-compositor/src/: blur.rs  capture_overlay.rs  clipboard.rs  color_management.rs  cursor.rs  decoration.rs  decoration_overrides.rs  decoration_policy.rs  desk_input.rs  device_input.rs  events.rs  focus.rs  idle.rs  image_capture.rs  input.rs  ipc.rs  keybinds.rs  lock.rs  main.rs  mirror.rs  night_light.rs  output_gamma.rs  output_modes.rs  output_prefs.rs  output_vrr.rs  remote_input.rs  render.rs  screenshot_overlay.rs  state.rs  text_layout.rs  udev.rs  wallpaper.rs  window_fx.rs  window_state.rs  windows.rs  winit.rs  xwayland.rs
metis-os-workspace/metis-compositor/src/color_management/: mod.rs  protocol.rs  vcgt.rs
metis-os-workspace/metis-compositor/src/grabs/: mod.rs  move_grab.rs  resize_grab.rs  scroll_resize_grab.rs
metis-os-workspace/metis-compositor/src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs
metis-os-workspace/metis-config/: Cargo.toml
metis-os-workspace/metis-config/resources/themes/: dark.json
metis-os-workspace/metis-config/src/: bar.rs  calendars.rs  clocks.rs  css.rs  dashboard.rs  decorations.rs  desktop_widgets.rs  game_rules.rs  gaming.rs  gpu_offload.rs  graphics.rs  input.rs  keybinds.rs  kitty.rs  lib.rs  locale.rs  lock.rs  menu.rs  outputs.rs  power.rs  remote.rs  screenshot.rs  theme.rs  wallpaper.rs  weather.rs
metis-os-workspace/metis-gaming/: Cargo.toml
metis-os-workspace/metis-gaming/src/: detect.rs  flatpak.rs  health.rs  lib.rs  power.rs  session.rs
metis-os-workspace/metis-grid/: Cargo.toml
metis-os-workspace/metis-grid/src/: auto_tile.rs  immersive.rs  layout.rs  lib.rs  model.rs  presets.rs  scroll.rs  snap_zones.rs  tile_mode.rs
metis-os-workspace/metis-grid/src/layout_engine/: collision.rs  mod.rs  move.rs  sort.rs
metis-os-workspace/metis-i18n/: Cargo.toml
metis-os-workspace/metis-i18n/src/: format.rs  lib.rs  paths.rs
metis-os-workspace/metis-portal/: Cargo.toml  build.rs
metis-os-workspace/metis-portal/src/: background.rs  compositor_events.rs  compositor_ipc.rs  compositor_remote_input.rs  main.rs  power_profile.rs  screencast.rs  screensaver.rs  screenshot.rs  settings.rs
metis-os-workspace/metis-portal/src/capture/: mod.rs  pump.rs  session.rs  shm.rs  wayland.rs
metis-os-workspace/metis-portal/src/mutter/: clipboard.rs  eis.rs  mod.rs
metis-os-workspace/metis-portal/src/pipewire/: mod.rs
metis-os-workspace/metis-protocol/: Cargo.toml
metis-os-workspace/metis-protocol/src/: lib.rs
metis-os-workspace/metis-remote/: Cargo.toml
metis-os-workspace/metis-remote/src/: gnome_rdp.rs  host.rs  lib.rs  main.rs
metis-os-workspace/metis-secrets/: Cargo.toml
metis-os-workspace/metis-secrets/src/: lib.rs
metis-os-workspace/metis-settings/: Cargo.toml
metis-os-workspace/metis-settings/src/: apps.rs  bluetooth.rs  gaming.rs  i18n_gtk.rs  main.rs  msauth.rs  nav.rs  net.rs  power.rs  printers.rs  remote.rs  runtime.rs  sound.rs  theme.rs  ui.rs
metis-os-workspace/metis-settings/src/pages/: appearance.rs  appearance_common.rs  background.rs  bluetooth.rs  calendars.rs  control_center.rs  desktop_widgets.rs  display.rs  display_arrangement.rs  display_confirm.rs  display_schedule.rs  edgebar.rs  gaming.rs  input_common.rs  keyboard.rs  locale.rs  menu.rs  mod.rs  mouse.rs  network.rs  power.rs  printers.rs  remote.rs  sound.rs  startmenu.rs  titlebars.rs  touchpad.rs  weather.rs  windows.rs
metis-os-workspace/metis-shell/: Cargo.toml  run-metis.sh  shell-voice.nix
metis-os-workspace/metis-shell/icons/papirus/: index.theme
metis-os-workspace/metis-shell/resources/themes/: dark.json  light.json
metis-os-workspace/metis-shell/scripts/: make-test-icc.py  metis-cmd.sh
metis-os-workspace/metis-shell/src/: main.rs
metis-os-workspace/metis-shell/src/briefing/: item.rs  mod.rs  scheduler.rs
metis-os-workspace/metis-shell/src/compositor/: client.rs  mod.rs
metis-os-workspace/metis-shell/src/config/: bar.rs  clocks.rs  mod.rs  weather.rs
metis-os-workspace/metis-shell/src/services/: applications.rs  audio_viz.rs  clipboard.rs  dashboard.rs  hardware.rs  mod.rs  notifications.rs  notify_dbus.rs  poll.rs  secrets.rs  tray.rs  tray_dbus_types.rs  tray_menu.rs  tray_watcher.rs  volumes.rs  weather.rs  windows.rs  workspaces.rs
metis-os-workspace/metis-shell/src/state/: dispatcher.rs  mod.rs
metis-os-workspace/metis-shell/src/ui/: app.rs  icons.rs  mod.rs  onboarding.rs  osd.rs  splash.rs  toast.rs
metis-os-workspace/scripts/: gaming-prime-smoke.sh  i18n-compile.sh  i18n-extract.sh  package-deb.sh
(+80 files in other folders)
