[package]
name = "metis-capture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared Wayland ext-image-copy-capture client for Metis screenshot tools"

[dependencies]
libc = "0.2"
png = "0.17"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
metis-grid = { workspace = true }
