[package]
name = "metis-compositor"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "metis-compositor"
path = "src/main.rs"

[dependencies]
bitflags = "2.6"
libc = "0.2"
metis-config = { workspace = true }
metis-grid = { workspace = true }
metis-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = "5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
fontdue = "0.9"
thiserror = { workspace = true }
xcursor = "0.3"
input = "0.10"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "66fc28b"
default-features = false
features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "use_system_lib",
    "wayland_frontend",
    "desktop",
    "renderer_gl",
    "renderer_multi",
    "xwayland",
]

[dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay"
rev = "66fc28b"
