[package]
name = "metis-compositor"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "metis-compositor"
path = "src/main.rs"

[dependencies]
bitflags = "2.6"
libc = "0.2"
metis-config = { workspace = true }
metis-grid = { workspace = true }
metis-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = "5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
fontdue = "0.9"
rustybuzz = "0.20"
unicode-bidi = "0.3"
metis-i18n = { workspace = true }
thiserror = { workspace = true }
xcursor = "0.3"
input = "0.10"
zeroize = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "66fc28b"
default-features = false
features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "use_system_lib",
    "wayland_frontend",
    "desktop",
    "renderer_gl",
    "renderer_multi",
    # Software rasterizer used as the cursor-plane fallback: when the fast
    # memory-copy path can't be used (e.g. a scaled cursor on a fractional-scale
    # output), pixman still renders the cursor onto the DRM hardware cursor plane
    # instead of dropping it to the primary plane — which would otherwise block a
    # fullscreen game buffer from being promoted to direct scanout.
    "renderer_pixman",
    "xwayland",
]

[dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay"
rev = "66fc28b"
