[package]
name = "metis-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared Metis configuration types, file IO, and theme tokens (no GTK)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
directories = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
