[package]
name = "metis-gaming"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Metis gaming platform — Flatpak optimizer, health checks, session hooks"

[lib]
name = "metis_gaming"
path = "src/lib.rs"

[[bin]]
name = "metis-gamingd"
path = "src/bin/metis-gamingd.rs"

[dependencies]
metis-config = { workspace = true }
metis-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
