[package]
name = "metis-i18n"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Metis localization — gettext (GTK) + Fluent (compositor), locale resolve, formatting"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }
intl-memoizer = "0.5"
once_cell = "1"
parking_lot = "0.12"
tracing = { workspace = true }
metis-config = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "unstable-locales"] }
