[package]
name = "metis-portal"
version = "0.1.0"
edition.workspace = true
description = "xdg-desktop-portal Settings backend for the Metis session"

[[bin]]
name = "metis-portal"
path = "src/main.rs"

[dependencies]
ashpd = { version = "0.13", default-features = false, features = ["backend", "settings", "tokio"] }
async-trait = "0.1"
futures-util = "0.3"
metis-config = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
