[package]
name = "metis-portal"
version = "0.1.0"
edition.workspace = true
description = "xdg-desktop-portal backend for the Metis session"

[[bin]]
name = "metis-portal"
path = "src/main.rs"

[dependencies]
ashpd = { version = "0.13", default-features = false, features = ["backend", "background", "settings", "screenshot", "screencast", "tokio"] }
async-trait = "0.1"
enumflags2 = "0.7"
futures-util = "0.3"
libc = "0.2"
metis-capture = { workspace = true }
metis-config = { workspace = true }
metis-protocol = { workspace = true }
png = "0.17"
pipewire = { version = "0.8", features = ["v0_3_34"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
tracing = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
xkbcommon = "0.8"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[build-dependencies]
pkg-config = "0.3"
