[package]
name = "metis-settings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Metis Settings — appearance, weather, network, and calendar configuration"

[dependencies]
gtk = { package = "gtk4", version = "0.8", features = ["v4_10"] }
glib = "0.19"
gio = "0.19"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metis-config = { workspace = true }
metis-secrets = { workspace = true }
metis-protocol = { workspace = true }
metis-gaming = { workspace = true }
