[package]
name = "metis-shell"
version = "0.2.0"
edition.workspace = true
description = "Metis Shell — configurable edge bar and command overlay"

[dependencies]
gtk = { package = "gtk4", version = "0.8", features = ["v4_10"] }
glib = "0.19"
gio = "0.19"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2"
serde = { workspace = true }
serde_json = { workspace = true }
gtk4-layer-shell = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
directories = "5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metis-protocol = { workspace = true }
