[package]
name = "metis-shell"
version = "0.2.0"
edition.workspace = true
description = "Metis Shell — configurable edge bar and command overlay"

[dependencies]
gtk = { package = "gtk4", version = "0.8", features = ["v4_10"] }
glib = "0.19"
gio = "0.19"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
thiserror = "2"
serde = { workspace = true }
serde_json = { workspace = true }
gtk4-layer-shell = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"
directories = "5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metis-protocol = { workspace = true }
metis-config = { workspace = true }
metis-secrets = { workspace = true }
metis-gaming = { workspace = true }
metis-capture = { workspace = true }
ical = "0.11"
rrule = "0.14.0"
async-trait = "0.1.89"
quick-xml = "0.40.1"
url = "2.5.8"
oo7 = { version = "0.6.0", default-features = false, features = ["tokio", "native_crypto"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-util = "0.3"
sysinfo = "0.33"
nix = { version = "0.29", features = ["signal", "user"] }
libc = "0.2"
